--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -20,6 +20,19 @@ jobs:
           echo See https://aka.ms/yaml
         displayName: "Run a multi-line script"
   - job: Job2
+    dependsOn: Job1
     steps:
-      - script: echo Job2
+      - script: echo Job2 depends on Job1
         displayName: "Run a one line script"
+  - job: Job3
+    dependsOn: Job1
+    steps:
+      - script: echo Job3 depends on Job1
+        displayName: "Run a one line script"
+  - job: Job4
+    dependsOn: 
+    - Job2
+    - Job3
+    steps:
+      - script: echo Job4 depends on Job2 and Job3
+        displayName: "Run a one line script"                
