--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -15,14 +15,17 @@ stages:
     - job: FirstJob
       steps:
       - bash: echo Build first job
+      - bash: echo $(PipelineLevelVariable)
     - job: SecondJob
       steps:
       - bash: echo Build secondjob
   - stage: DevDeploy
+    variables:
+      environment: Dev
     jobs:
     - job: DevDeployJob
       steps:
-      - bash: echo DevDeployJob
+      - bash: echo $(environment)DeployJob
   - stage: QADeploy
     jobs:
     - job: QADeployJob
